catkin_ws/logs/uas/build.make.010.log.stderr
In file included from /opt/ros/noetic/include/ros/node_handle.h:35,
                 from /opt/ros/noetic/include/ros/ros.h:45,
                 from /home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp:1:
/opt/ros/noetic/include/ros/service_client.h: In instantiation of ‘bool ros::ServiceClient::call(Service&) [with Service = mavros_msgs::State_<std::allocator<void> >]’:
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp:38:23:   required from here
/opt/ros/noetic/include/ros/service_client.h:91:25: error: ‘struct mavros_msgs::State_<std::allocator<void> >’ has no member named ‘request’
   91 |     return call(service.request, service.response, st::md5sum(service));
      |                 ~~~~~~~~^~~~~~~
/opt/ros/noetic/include/ros/service_client.h:91:42: error: ‘struct mavros_msgs::State_<std::allocator<void> >’ has no member named ‘response’
   91 |     return call(service.request, service.response, st::md5sum(service));
      |                                  ~~~~~~~~^~~~~~~~
In file included from /opt/ros/noetic/include/ros/service_client.h:33,
                 from /opt/ros/noetic/include/ros/node_handle.h:35,
                 from /opt/ros/noetic/include/ros/ros.h:45,
                 from /home/xipiter/catkin_ws/src/uas/src/uas_mission.cpp:1:
/opt/ros/noetic/include/ros/service_traits.h: In instantiation of ‘static const char* ros::service_traits::MD5Sum<M>::value() [with M = mavros_msgs::State_<std::allocator<void> >]’:
/opt/ros/noetic/include/ros/service_traits.h:79:102:   required from ‘const char* ros::service_traits::md5sum() [with M = mavros_msgs::State_<std::allocator<void> >]’
/opt/ros/noetic/include/ros/service_client_options.h:95:33:   required from ‘void ros::ServiceClientOptions::init(const string&, bool, const M_string&) [with Service = mavros_msgs::State_<std::allocator<void> >; std::string = std::__cxx11::basic_string<char>; ros::M_string = std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
/opt/ros/noetic/include/ros/node_handle.h:1264:5:   required from ‘ros::ServiceClient ros::NodeHandle::serviceClient(const string&, bool, const M_string&) [with Service = mavros_msgs::State_<std::allocator<void> >; std::string = std::__cxx11::basic_string<char>; ros::M_string = std::map<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >]’
/home/xipiter/catkin_ws/src/uas/src/uas_calls.cpp:34:85:   required from here
/opt/ros/noetic/include/ros/service_traits.h:47:34: error: ‘__s_getServerMD5Sum’ is not a member of ‘mavros_msgs::State_<std::allocator<void> >’
   47 |     return M::__s_getServerMD5Sum().c_str();
      |            ~~~~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [CMakeFiles/uas_mission.dir/build.make:63: CMakeFiles/uas_mission.dir/src/uas_mission.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:155: CMakeFiles/uas_mission.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
